# sst-composition-tool

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  contentmanipulation  contentmanipulation.pro  demo.def  dump.json  index.qrc  main.cpp  mainwindow.cpp  mainwindow.h  out.json  pyproject.toml  sstconfiggui.pro  util.cpp  util.hpp  window.cpp  window.hpp
app/: __init__.py  componentnode.py  componenttree.py  compositionparser.py  compressedtree.py  demo.py  elementtree.py  hierarchyresolver.py  routes.py  templates.py
app/boilerplate/: demo.py  html.py  sst.py
app/component/: node.py
app/db/: checkpoint.py  sstinfo.py
app/static/css/: beautiful.css  index.css  micromodal.css
app/static/js/: drawflow_methods.js  hierarchy.js  html.js  modal.js
app/static/js/drawflow/: event.js
app/static/templates/: run.templ
app/templates/: base.html  canvas.html  index.html  run.py  scripts.html  styles.html
example/calculator/: CMakeLists.txt  add.cpp  addsub.cpp  bintodec.cpp  calculator.cpp  fulladder.cpp  ripplecarryadder.cpp  run.py
example/rca_mod/: CMakeLists.txt  addsub.cpp  bintodec.cpp  ripplecarryadder.cpp  run.py
example/rca_mono/: CMakeLists.txt  fulladder.cpp
flaskr/: __init__.py  componenttree.py  compositionparser.py  templates.py
flaskr/static/js/: hierarchy.js
flaskr/templates/: index.html  scripts.html
src/sct/: composition.py  demo.py
src/sct/boilerplate/: html.py  sst.py
src/sct/component/: hierarchy.py  tree.py
src/sct/db/: checkpoint.py  sstinfo.py
src/sct/sst_ct.egg-info/: SOURCES.txt  top_level.txt
src/sct/static/css/: index.css
src/sct/static/js/: modal.js
src/sct/static/js/drawflow/: event.js  module.js
src/sct/templates/: index.html  modal.html  run.py  scripts.html  styles.html
src/sst_ct.egg-info/: PKG-INFO  SOURCES.txt
sstconfiggui/: __init__.py  graphdataprocessor.py  templates.py
sstconfiggui/static/js/: drawflow_methods.js
sstconfiggui/templates/: index.html
static/: index.html
tests/: parser.py  test_routes.py
tests/resources/: sample_form.json  sample_run.py  sample_save.json
